@@ -22,12 +22,13 @@ Legend:
 # -> Issue Fix
 $ -> Language fix or change
 + -> Addition
-^ -> Change
+^^ -> Change
 - -> Removed
 ! -> Note
 
 19-Jan-2012 Jean-Marie Simonet
  #$ [#27747] Strict standards: Module manager. Thanks Nikolai
+ ^ [#27563] Author tag in xml. Thanks Brian
 
 -------------------- 2.5.0 RC1 Release [18-Jan-2012] ------------------
 
